--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TendenciasDany",
-  "displayName": "TendenciasDany"
+  "name": "AwesomeTSProject",
+  "displayName": "AwesomeTSProject"
 }
