--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TendenciasDany",
+  "name": "AwesomeTSProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/cli": "^13.6.8",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-native": "^0.73.0",
     "react": "^18.2.0",
